- follow renames in GitRepository parser - https://github.com/OpenGrok/OpenGrok/issues/794